<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_planner_srv</name>
  <version>0.0.0</version>
  <description>Mission Planning Service</description>
  <maintainer email="karpase@gmail.com">karpase</maintainer>
  <license>FML</license>

  <depend>rclpy</depend>
  <depend>swarm_interfaces</depend>
  <depend>map_cover</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
